Edited wiki page Turtor through web user interface.

--- a/wiki/Turtor.wiki
+++ b/wiki/Turtor.wiki
@@ -55,7 +55,7 @@ Excel からコピー＆ペーストするとこの形式となります。
 データ読み込みはスクリプトインタフェース(si)のAPIを使用して、
 レコード単位で行います。
 
-|| peekRecord || ファイル読み込み位置は変えずにデータを読み込む ||
+|| peekRecord || ファイル読み取り位置を変えずにデータを読み込む ||
 || readRecord || データを読み込む ||
 
 通常のレコード読み込みは readRecord です。
