--- a/wiki/Tutor.wiki
+++ b/wiki/Tutor.wiki
@@ -55,8 +55,8 @@ Excel からコピー＆ペーストするとこの形式となります。
 データ読み込みはスクリプトインタフェース(si)のAPIを使用して、
 レコード単位で行います。
 
-|| peekRecord || ファイル読み取り位置を変えずにデータを読み込む ||
-|| readRecord || データを読み込む ||
+|| peekRecord(フォーマット定義ファイル名) || ファイル読み取り位置を変えずにデータを読み込む ||
+|| readRecord(フォーマット定義ファイル名) || データを読み込む ||
 
 通常のレコード読み込みは readRecord です。
 
