Edited wiki page Tutor through web user interface.

--- a/wiki/Tutor.wiki
+++ b/wiki/Tutor.wiki
@@ -63,6 +63,8 @@ Excel からコピー＆ペーストするとこの形式となります。
 データの中身によって、読み込むフォーマットを振り分けたい場合は
 あらかじめ peekRecord で内容を確認して処理を分岐させます。
 
+trace を使うと標準出力にメッセージが出力されます。
+
 {{{
 !function() {
 
@@ -113,4 +115,15 @@ Excel からコピー＆ペーストするとこの形式となります。
     trace('end');
 
 }();
+}}}
+
+== FLFM を使用する ==
+
+FLFM.jar をダブルクリックしてアプリケーションを起動します。
+
+ダブルクリックで起動できない場合、標準出力を見たい場合などは
+下記のようにコマンドラインから起動します。
+
+{{{
+java -jar FLFM.jar
 }}}
