Edited wiki page Tutor through web user interface.

--- a/wiki/Tutor.wiki
+++ b/wiki/Tutor.wiki
@@ -1,6 +1,8 @@
 = Tutor =
 
-== フォルダ構成 ==
+<wiki:toc/>
+
+= フォルダ構成 =
 
 ファイルの種別毎にフォルダを用意し、その配下に固定長のデータファイルを置きます。
 
@@ -29,7 +31,8 @@ folder/
                .
                .
 }}}
-== フォーマット定義ファイル ==
+
+= フォーマット定義ファイル =
 
 1行目は 2行目以降のデータの何列目が何のデータなのかを示す定義です。
 
@@ -50,7 +53,7 @@ Excel からコピー＆ペーストするとこの形式となります。
 10	発行日 - 日															Z	2				ISSUE_D
 }}}
 
-== データ読み込み用スクリプト ==
+= データ読み込み用スクリプト =
 
 データ読み込みはスクリプトインタフェース(si)のAPIを使用して、
 レコード単位で行います。
@@ -117,7 +120,7 @@ trace を使うと標準出力にメッセージが出力されます。
 }();
 }}}
 
-== FLFM を使用する ==
+= FLFM を使用する =
 
 FLFM.jar をダブルクリックしてアプリケーションを起動します。
 
