Edited wiki page Tutor through web user interface.

--- a/wiki/Tutor.wiki
+++ b/wiki/Tutor.wiki
@@ -62,8 +62,8 @@ Excel からコピー＆ペーストするとこの形式となります。
 データ読み込みはスクリプトインタフェース(si)のAPIを使用して、
 レコード単位で行います。
 
-|| peekRecord(フォーマット定義ファイル名) || ファイル読み取り位置を変えずにデータを読み込む ||
-|| readRecord(フォーマット定義ファイル名) || データを読み込む ||
+|| peekRecord(引数：フォーマット定義ファイル名) || ファイル読み取り位置を変えずにデータを読み込む ||
+|| readRecord(引数：フォーマット定義ファイル名) || データを読み込む ||
 
 通常のレコード読み込みは readRecord です。
 
