Edited wiki page Tutor through web user interface.

--- a/wiki/Tutor.wiki
+++ b/wiki/Tutor.wiki
@@ -41,7 +41,7 @@ folder/
 1行目は 2行目以降のデータの何列目が何のデータなのかを示す定義です。
 
 2行目以降はタブ区切りのテキストです。
-Excel からコピー＆ペーストするとこの形式となります。
+Excel からコピー＆ペーストすると、この形式となります。
 
 {{{
 {name: 21, comment: 1, description: 20, type: 16, size: 17}
