Edited wiki page Tutor through web user interface.

--- a/wiki/Tutor.wiki
+++ b/wiki/Tutor.wiki
@@ -67,10 +67,21 @@ Excel からコピー＆ペーストすると、この形式となります。
 
 通常のレコード読み込みは readRecord です。
 
+下記のスクリプトは、単一のフォーマットのレコードをファイル終端まで読み込みます。
+
+{{{
+!function() {
+	// ファイル終端まで、 format.txt で定義されたレコードを読み込む。
+    while(!si.isEOF() ) {
+        si.readRecord('format.txt');
+    }
+}();
+}}}
+
 データの中身によって、読み込むフォーマットを振り分けたい場合は
 あらかじめ peekRecord で内容を確認して処理を分岐させます。
 
-trace を使うと標準出力にメッセージが出力されます。
+また、 trace を使うと標準出力にメッセージが出力されます。
 
 {{{
 !function() {
