Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -16,8 +16,6 @@
 FLFM でデータファイルを開くと、データと同階層の flfm/main.js が実行され、
 任意のフォーマットとして読み込まれます。
 
-異なる種別のファイルは、別フォルダを用意し、同じような構成で main.js 等を配置します。
-
 {{{
 folder/
        data1.txt
@@ -34,9 +32,17 @@ folder/
                .
 }}}
 
+異なる種別のファイルは、別フォルダを用意し、同じような構成で main.js 等を配置します。
+
 = フォーマット定義ファイル =
 
-1行目は 2行目以降のデータの何列目が何のデータなのかを示す定義です。
+1行目は 2行目以降のデータの何列目が何のデータなのかを示す定義です(1列目 = 0)。
+
+|| name || 項目名 || 必須 ||
+|| comment || コメント(日本語の項目名) || 必須 ||
+|| type || 型 ||  ||
+|| size || サイズ(バイト数) || 必須 ||
+|| description || 備考 ||  ||
 
 2行目以降はタブ区切りのテキストです。
 Excel からコピー＆ペーストすると、この形式となります。
