--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -38,7 +38,7 @@ folder/
 
 1行目は 2行目以降のデータの何列目が何のデータなのかを示す定義です(1列目 = 0)。
 
-|| name || 項目名 || 必須 ||
+|| name || 項目名(英名) || 必須 ||
 || comment || コメント(日本語の項目名) || 必須 ||
 || type || 型 ||  ||
 || size || サイズ(バイト数) || 必須 ||
