Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -85,12 +85,10 @@ Excel からコピー＆ペーストすると、この形式となります。
 データの中身によって、読み込むフォーマットを振り分けたい場合は
 あらかじめ peekRecord で内容を確認して処理を分岐させます。
 
-また、 trace を使うと標準出力にメッセージが出力されます。
-
 {{{
 !function() {
 
-    trace('start');
+    si.trace('start');
 
     // レコード
     var record;
@@ -134,7 +132,7 @@ Excel からコピー＆ペーストすると、この形式となります。
         }
     }
 
-    trace('end');
+    si.trace('end');
 
 }();
 }}}
