Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -13,6 +13,8 @@
 データファイルと同階層に flfm というフォルダを作成し、
 フォーマット定義ファイル及び データ読み込み用のスクリプトを置きます。
 
+同階層に flfm が存在しない場合、親フォルダを検索します。
+
 FLFM でデータファイルを開くと、データと同階層の flfm/main.js が実行され、
 任意のフォーマットとして読み込まれます。
 
